# compliance-autopilot

./: .gitignore  README.md  pyproject.toml
.gitlab/agents/compliance-autopilot/: config.yml
agent/controls/: gdpr_controls.json  soc2_controls.json
agent/scanners/: repo_analyzer.py
backend/: pyproject.toml
backend/app/: __init__.py  main.py  models.py
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/scan/: route.ts
frontend/src/components/: ComplianceDashboard.tsx  ScanForm.tsx
