[project]
name = "compliance-autopilot-backend"
version = "1.0.0"
description = "Compliance Autopilot — GitLab Duo Agent for SOC2/GDPR drift detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "anthropic>=0.40.0",
    "python-gitlab>=4.9.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "reportlab>=4.2.0",
    "jinja2>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
